# rust-rocksdb

rocksdb-sys/: Cargo.toml
rocksdb-sys/src/: ffi.rs
src/: comparator.rs  lib.rs  main.rs  merge_operator.rs  rocksdb.rs  rocksdb_options.rs
test/: test_iterator.rs  test_multithreaded.rs
