[package]
name = "rocksdb-sys"
version = "0.3.0"
authors = ["Arkadiy Paronyan arkadiy@ethcore.io>"]
license = "MIT/Apache-2.0/BSD"
description = "Native bindings to librocksdb"
readme = "README.md"
repository = "https://github.com/jsgf/rocksdb-sys.git"
keywords = [ "ffi", "rocksdb" ]

build = "build.rs"
links = "rocksdb"

[features]
default = [ "static" ]
static = []

[dependencies]
libc = "0.2"
local-encoding = "0.2.0"
snappy-sys = { git = "https://github.com/paritytech/rust-snappy", rev="40ac9a0d9fd613e7f38df800a11a589b7296da73" }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
